--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Suranna&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Suranna&display=swap');
 
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
- 
+html{
+    scroll-behavior: smooth;
+}
+
+
+
